Include selected listbox/combobox options in accessible name calculation

Step 2E of the Accessible Name and Description Computation spec states:
"If the embedded control has role combobox or listbox, return the text
alternative of the chosen option." This part of the accessible name
calculation had not been implemented in AXNodeObject::TextAlternative.

Bug: 890066
Change-Id: I3829d8229b816fe69e939307aa6c44563a757eef
Reviewed-on: https://chromium-review.googlesource.com/1249887
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Joanmarie Diggs <joanmarie.diggs@gmail.com>
Cr-Commit-Position: refs/heads/master@{#595234}
Former-commit-id: e0e92501211eaabbe4bf1e08d6204b4f92713b70